# ML-interfaces

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
design_decisions/: data_set.ipynb  sklearn_data_loading.ipynb  why_not_generic_data_containers.ipynb
design_decisions/python_language_features/: enums.ipynb  generics_for_datasets.ipynb  typing_protocols.ipynb
design_decisions/utils/: why_not_generic_data_containers.py
docs/: readme.md
docs/alternative_designs_considered/: readme.md
docs/alternative_designs_considered/uml/: data_design.puml
docs/related_projects/: do_not_integrate.md
docs/uml/: data_container_implementation.puml  data_container_interfaces.puml  data_design.puml  data_format.puml  data_interfaces.puml  data_pipeline.puml  dataset.puml  dataset_interface.puml  dataset_interface_simplified.puml  dataset_interfaces.puml  estimator.png:Zone.Identifier  estimator.puml  pipeline.puml
docs/uml/discarded_visualizations/: bindings.puml
examples/end-to-end/tensorflow/sagemaker/0_basic/: README.md
examples/licenses/: readme.md
examples/python_language_features/: enums.ipynb
examples/pytorch/data_adapters/: data_adapters.ipynb  data_protocols.py
examples/pytorch_lightning/: lightning_adapter.ipynb  lightning_adapter_extras.py
examples/pytorch_lightning/_not_working/: lightning_cli_adapter.ipynb
examples/reader/: csv_reader.ipynb  csv_reader.py
interfaces/: data_formats.py
ml_interfaces/dataset/implementation/splitter/: base_splitter.py  clustered_splitter.py  spatial_splitter.py
ml_interfaces/dataset/interface/: data_formats.py  data_set.py
src/dataset/implementation/data_container/: base_data_container.py
src/dataset/implementation/data_set/: file_data_set.py
src/dataset/implementation/splitter/: time_series_splitter.py
src/dataset/interface/: data_container.py
src/ml_interfaces/implementation/writer/: base_writer.py  local_writer.py
src/ml_interfaces/interface/data/: container.py  dataset.py
src/oo_ml/implementation/data/container/: base_container.py
src/oo_ml/implementation/data/data_set/: base_data_set.py  file_data_set.py  semi_structured_data_set.py  structured_data_set.py
src/oo_ml/implementation/data/dataset/: base_dataset.py  file_dataset.py  semi_structured_dataset.py  structured_dataset.py
src/oo_ml/implementation/data/reader/: base_reader.py  local_reader.py  structured_data_reader.py
src/oo_ml/implementation/data/splitter/: base_splitter.py  clustered_splitter.py  independent_splitter.py  pre_split_splitter.py  spatial_splitter.py  time_series_splitter.py
src/oo_ml/implementation/data/writer/: local_writer.py
src/oo_ml/implementation/data_set/: semi_structured_data_set.py  structured_data_set.py
src/oo_ml/implementation/pipeline/: sagemaker_pipeline.py
src/oo_ml/implementation/splitter/: independent_splitter.py
src/oo_ml/interface/data/: container.py  data_set.py  data_set_type.py  dataset.py  format.py  formats.py  in_memory_format.py  reader.py  tmp_data_set.py.py  writer.py
src/oo_ml/interface/estimator/: estimator.py
src/oo_ml/interface/pipeline/: pipeline.py
